# neural-swarm

./: .gitignore  Boids.hs  Brain.hs  Convenience.hs  FireFlies.hs  Minimizer.hs  README.md  SizedS.hs  Test.hs  fireflies.cabal  fireflies.sublime-project  fireflies.sublime-workspace  neural-swarm.cabal  stack.yaml
app/: Main.hs
src/: Boids.hs  Brain.hs  Charter.hs  Convenience.hs  Filler.hs  FireFlies.hs  Minimizer.hs  MyDo.hs  Runner.hs  Simulator.hs  SizedL.hs  SizedS.hs  SizedV.hs  Test.hs  fireflies.sublime-workspace
