name:                fireflies
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/fireflies#readme
license:             BSD3
license-file:        LICENSE
author:              Bassel Mabsout
maintainer:          bme11@mail.aub.edu
copyright:           2016 Author Here
category:            Research
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Runner
                     , FireFlies
                     , Boids
                     , Brain
                     , Simulator
                     , Convenience
                     , Minimizer
                     , SizedV
                     , SizedL
                     , SizedS
                     , Test
  build-depends:       base >= 4.7 && < 5
                     , split
                     , gloss > 1.10
                     , hmatrix-gsl
                     , hmatrix
                     , kdt
                     , lens
                     , fast-math
                     , containers
                     , vector
                     , storable-tuple
                     , hsdev
  default-language:    Haskell2010

executable fireflies-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       fireflies
  default-language:    Haskell2010

test-suite fireflies-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fireflies
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fireflies
