name:                neural-swarm
version:             0.3.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/bmabsout/neural-swarm#readme
license:             BSD3
license-file:        LICENSE
author:              Bassel Mabsout
maintainer:          bme11@mail.aub.edu
copyright:           2016 Bassel Mabsout
category:            Research
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Runner
                     , FireFlies
                     , Boids
                     , Brain
                     , Simulator
                     , Convenience
                     , Minimizer
                     , SizedV
                     , SizedL
                     , SizedS
                     , Test
  build-depends:       base >= 4.7 && < 5
                     , split
                     , gloss > 1.10
                     , hmatrix-gsl
                     , hmatrix
                     , kdt
                     , lens
                     , fast-math
                     , containers
                     , vector
                     , storable-tuple
  default-language:    Haskell2010

executable neural-swarm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       neural-swarm
  default-language:    Haskell2010

test-suite neural-swarm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neural-swarm
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bmabsout/neural-swarm
